--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,7 @@
         android:theme="@style/Theme.GANTApplication"
         tools:targetApi="31">
         <activity
-            android:name=".AdminAddNewProductActivity"
-            android:exported="false" />
-        <activity
-            android:name=".HomeActivity"
+            android:name=".AdminCategoryActivity"
             android:exported="false" />
         <activity
             android:name=".RegisterActivity"
